--- a/Wizcard/Wizcard/Controllers/OnBoarding/Base.lproj/Onboarding.storyboard
+++ b/Wizcard/Wizcard/Controllers/OnBoarding/Base.lproj/Onboarding.storyboard
@@ -350,7 +350,7 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="0.0" y="335" width="375" height="332"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I09-9V-CZG">
-                                <rect key="frame" x="187" y="592" width="78" height="27"/>
+                                <rect key="frame" x="189" y="592" width="76" height="27"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -359,13 +359,13 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="32" y="94" width="112" height="95"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WIZCARD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8q-Il-UL9">
-                                <rect key="frame" x="32" y="209" width="219" height="56"/>
+                                <rect key="frame" x="32" y="209" width="207" height="56"/>
                                 <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="48"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get more out of evert event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMk-dZ-JyV">
-                                <rect key="frame" x="32" y="260" width="208.5" height="20"/>
+                                <rect key="frame" x="32" y="260" width="205.5" height="20"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -938,7 +938,7 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="0.0" y="283" width="375" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Crm-ji-a9y" customClass="BorderView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Crm-ji-a9y" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                 <rect key="frame" x="16" y="357" width="343" height="57"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQH-OH-VBT">
@@ -982,7 +982,7 @@ of you before you event extend your hand.</string>
                                     <constraint firstAttribute="trailing" secondItem="2xE-ud-TRe" secondAttribute="trailing" id="yFs-Nj-jTW"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-53-Grq" customClass="BorderView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-53-Grq" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                 <rect key="frame" x="16" y="434" width="343" height="57"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4HT-XA-6U4">
@@ -1026,7 +1026,7 @@ of you before you event extend your hand.</string>
                                     <constraint firstItem="Xwu-1o-3NK" firstAttribute="leading" secondItem="Gry-53-Grq" secondAttribute="leading" id="yoE-dk-z0i"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y5S-et-uaq" customClass="BorderView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y5S-et-uaq" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                 <rect key="frame" x="16" y="511" width="343" height="57"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="00t-jW-OEl">
@@ -1137,7 +1137,7 @@ of you before you event extend your hand.</string>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6RH-t6-Lm5">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jxk-bc-Dfq" customClass="BorderView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jxk-bc-Dfq" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                         <rect key="frame" x="10" y="20" width="355" height="116"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x9p-gz-JId">
@@ -1189,7 +1189,7 @@ of you before you event extend your hand.</string>
                                             <constraint firstAttribute="bottom" secondItem="4AQ-o9-syJ" secondAttribute="bottom" constant="15" id="u7q-xO-Kwd"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ja-hj-L49" customClass="BorderView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ja-hj-L49" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                         <rect key="frame" x="10" y="151" width="355" height="116"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="embedVideo" translatesAutoresizingMaskIntoConstraints="NO" id="LO7-ji-eKU">
@@ -1311,7 +1311,7 @@ of you before you event extend your hand.</string>
                                             <constraint firstItem="Yzc-yP-i8d" firstAttribute="top" secondItem="1mO-v7-akm" secondAttribute="top" id="tOi-VU-yPl"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O7k-ba-S3W" customClass="BorderView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O7k-ba-S3W" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                         <rect key="frame" x="10" y="437" width="355" height="101"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9wh-aL-DHu">
@@ -1351,7 +1351,7 @@ of you before you event extend your hand.</string>
                                             <constraint firstItem="2o7-fL-E15" firstAttribute="centerX" secondItem="O7k-ba-S3W" secondAttribute="centerX" id="zVm-nW-mfi"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JKB-2B-YAc" customClass="BorderView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JKB-2B-YAc" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                         <rect key="frame" x="10" y="553" width="355" height="404"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yua-z3-mD3">
@@ -1575,7 +1575,7 @@ of you before you event extend your hand.</string>
                                             <constraint firstItem="10J-ag-26l" firstAttribute="top" secondItem="7Zk-u3-vEa" secondAttribute="bottom" constant="16" id="xwR-8a-0Zq"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgD-eH-APy" customClass="BorderView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgD-eH-APy" customClass="BorderView" customModule="Wizcard" customModuleProvider="target">
                                         <rect key="frame" x="10" y="972" width="355" height="132"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Social Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8aF-vq-XON">
@@ -1621,17 +1621,17 @@ of you before you event extend your hand.</string>
                                             <constraint firstItem="HXh-Kc-6a9" firstAttribute="top" secondItem="8aF-vq-XON" secondAttribute="bottom" constant="20" id="xSi-PI-y9z"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mBA-sM-dxd" userLabel="InviteView" customClass="BorderView">
-                                        <rect key="frame" x="10" y="1119" width="355" height="56"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mBA-sM-dxd" userLabel="InviteView" customClass="BorderView">
+                                        <rect key="frame" x="10" y="1119" width="355" height="0.0"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="linkedinadd" translatesAutoresizingMaskIntoConstraints="NO" id="1dv-XP-XD6">
-                                                <rect key="frame" x="20" y="8" width="40" height="40"/>
+                                                <rect key="frame" x="20" y="-20" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="AyN-uQ-Nvc"/>
                                                     <constraint firstAttribute="height" constant="40" id="TXb-sQ-YUW"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JVa-sK-6rj">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JVa-sK-6rj" userLabel="Invite">
                                                 <rect key="frame" x="70" y="18" width="275" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="Ig4-Be-hNR"/>
@@ -1641,11 +1641,12 @@ of you before you event extend your hand.</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RC0-hl-Q1u">
-                                                <rect key="frame" x="0.0" y="0.0" width="355" height="56"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="355" height="0.0"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" id="1oY-xS-52Z"/>
                                             <constraint firstItem="JVa-sK-6rj" firstAttribute="leading" secondItem="1dv-XP-XD6" secondAttribute="trailing" constant="10" id="61R-Vy-zWQ"/>
                                             <constraint firstAttribute="trailing" secondItem="RC0-hl-Q1u" secondAttribute="trailing" id="6V6-Qd-qdh"/>
                                             <constraint firstItem="RC0-hl-Q1u" firstAttribute="leading" secondItem="mBA-sM-dxd" secondAttribute="leading" id="7Cz-HN-xTa"/>
@@ -1659,7 +1660,7 @@ of you before you event extend your hand.</string>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gus-Ye-gzz" customClass="RoundableButton" customModule="Wizcard" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="1190" width="355" height="58"/>
+                                        <rect key="frame" x="10" y="1134" width="355" height="58"/>
                                         <color key="backgroundColor" red="0.094117647060000004" green="0.63137254899999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="58" id="J6G-Dg-O0H"/>
